--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
 
-    <title>2D Ray Casting</title>
+    <title>Karthikeshwar</title>
 </head>
 
 <body>
