--- a/projects.html
+++ b/projects.html
@@ -14,15 +14,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
 
-    <title>Karthikeshwar's website</title>
+    <title>Projects</title>
 </head>
 
 <body>
     <div>
         <script src="ray.js"></script>
         <script src="boundary.js"></script>
+        <script src="boundary-black.js"></script>
         <script src="particle.js"></script>
-        <script src="sketch.js"></script>
+        <script src="sketch-projects.js"></script>
     </div>
 
     <div>
