--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
     <div>
         <script src="ray.js"></script>
+        <script src="commons.js"></script>
         <script src="boundary.js"></script>
         <script src="particle.js"></script>
         <script src="sketch.js"></script>
