--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <div>
         <script src="ray.js"></script>
         <script src="boundary.js"></script>
-        <script src="boundary-black.js"></script>
+        <script src="commons.js"></script>
         <script src="particle.js"></script>
         <script src="sketch-projects.js"></script>
     </div>
